# project-4-rule-evaluation

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  LICENSE  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QMarkAutomaton.cpp  QMarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  README.md  Relation.cpp  (+16 more)
