cmake_minimum_required(VERSION 3.17)
project(project_4_rule_evaluation)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(project_4_rule_evaluation
        AddAutomaton.cpp
        AddAutomaton.h
        Automaton.h
        ColonAutomaton.cpp
        ColonAutomaton.h
        ColonDashAutomaton.cpp
        ColonDashAutomaton.h
        CommaAutomaton.cpp
        CommaAutomaton.h
        CommentAutomaton.cpp
        CommentAutomaton.h
        Database.cpp
        Database.h
        DatalogProgram.cpp
        DatalogProgram.h
        FactsAutomaton.cpp
        FactsAutomaton.h
        Header.cpp
        Header.h
        IDAutomaton.cpp
        IDAutomaton.h
        Interpreter.cpp
        Interpreter.h
        LeftParenAutomaton.cpp
        LeftParenAutomaton.h
        Lexer.cpp
        Lexer.h
        main.cpp
        MultiplyAutomaton.cpp
        MultiplyAutomaton.h
        Parameter.h
        Parser.cpp
        Parser.h
        PeriodAutomaton.cpp
        PeriodAutomaton.h
        Predicate.cpp
        Predicate.h
        QMarkAutomaton.cpp
        QMarkAutomaton.h
        QueriesAutomaton.cpp
        QueriesAutomaton.h
        Relation.cpp
        Relation.h
        RightParenAutomaton.cpp
        RightParenAutomaton.h
        Rule.cpp
        Rule.h
        RulesAutomaton.cpp
        RulesAutomaton.h
        SchemesAutomaton.cpp
        SchemesAutomaton.h
        StringAutomaton.cpp
        StringAutomaton.h
        Token.cpp
        Token.h
        Tuple.cpp
        Tuple.h)
